<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">wordest</string>
    <string name="Start">Start</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="exercises">exercises</string>
    <string name="sentences">sentences</string>
    <string name="add">add</string>
    <string name="add_word">add word</string>
    <string name="Your_words_is_loading" tools:ignore="TypographyEllipsis">Your words is loading...</string>
    <string name="Select_a_word">Select a word</string>
    <string name="example">example</string>
    <string name="Add_Random_Word">Add Random Word</string>
    <string name="Add_This_Word">Add This Word</string>
    <string name="MY_WORDS_LIST">MY WORDS LIST</string>
    <string name="main_page_selected">page is selected.</string>
    <string name="Favorites">Favorites</string>
    <string name="Add">Add</string>
    <string name="Version">Version</string>
    <string name="add_plus">+</string>
    <string name="ADD_WORD">ADD WORD</string>
    <string name="CANCEL" tools:ignore="ButtonCase">CANCEL</string>
    <string name="OK">OK</string>
    <string name="MEANS">MEANS</string>
    <string name="SENTENCES">SENTENCES</string>
    <string name="DESCRIPTIONS">DESCRIPTIONS</string>
    <string name="Your_favorite_list_is_empty">Your favorite list is empty.</string>
    <string name="Write_correct_word">Write correct word.</string>
    <string name="MY_FAVORITE_WORDS_LIST">MY FAVORITE WORDS LIST</string>
    <string name="TURKISH">TURKISH :</string>
    <string name="Correct">Correct</string>
    <string name="Wrong">Wrong</string>
    <string name="PLAY">PLAY</string>
    <string name="TEST">TEST</string>
    <string name="EXERCISE">EXERCISE</string>
    <string name="ENGLISH">ENGLISH :</string>
    <string name="Difficulty">Difficulty :</string>
    <string name="Unknown_Chance">Unknown Chance :</string>
    <string name="Only_Favorite_Words">Only Favorite Words :</string>
    <string name="Your_words_list_is_empty">Your words list is empty.</string>
    <string name="This_page_will_be_added_later">This page will be added later..</string>
    <string name="username">username</string>
    <string name="Total_Views">Total Views :</string>
    <string name="Correct_Answers">Correct Answers :</string>
    <string name="INFO">INFO</string>
    <string name="DELETE_THIS_WORD">DELETE THIS WORD</string>
    <string name="Means_Chance">Means Chance :</string>
    <string name="Chance_of_Meaning">Chance of Meaning :</string>
    <string name="Settings">Settings</string>
    <string name="Help">Help</string>
    <string name="Hint">Hint</string>
    <string name="Chance_of_Unknown">Chance of Unknown :</string>
    <string name="I_Dont_Know">I Don\'t Know</string>
    <string name="A">A )</string>
    <string name="B">B )</string>
    <string name="C">C )</string>
    <string name="D">D )</string>
    <string name="SETTINGS">SETTINGS</string>
    <string name="Sounds">Sounds :</string>
</resources>