<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    android:clickable="true"
    android:focusable="true">

    <TextView
        android:id="@+id/fragmentTest_textView_word"
        style="@style/item_textView_titillium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        android:textColor="@color/logo_letters"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/fragmentTest_linearLayout_options"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/fragmentTest_linearLayout_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.75"
        app:layout_constraintWidth_percent="0.8"
        tools:ignore="UselessLeaf">

        <LinearLayout
            android:id="@+id/fragmentTest_linearLayout_A"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_word_info"
            android:orientation="horizontal"
            android:padding="10dp"
            tools:ignore="UselessParent">

            <TextView
                style="@style/textView_font_bahnschrift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/A"
                android:textColor="@color/testOptions"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fragmentTest_textView_A"
                style="@style/item_textView_titillium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragmentTest_linearLayout_B"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_word_info"
            android:orientation="horizontal"
            android:padding="10dp"
            tools:ignore="UselessParent">

            <TextView
                style="@style/textView_font_bahnschrift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/B"
                android:textColor="@color/testOptions"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fragmentTest_textView_B"
                style="@style/item_textView_titillium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragmentTest_linearLayout_C"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@drawable/background_word_info"
            android:orientation="horizontal"
            android:padding="10dp"
            tools:ignore="UselessParent">

            <TextView
                style="@style/textView_font_bahnschrift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/C"
                android:textColor="@color/testOptions"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fragmentTest_textView_C"
                style="@style/item_textView_titillium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/fragmentTest_linearLayout_D"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_word_info"
            android:orientation="horizontal"
            android:padding="10dp"
            tools:ignore="UselessParent">

            <TextView
                style="@style/textView_font_bahnschrift"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/D"
                android:textColor="@color/testOptions"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/fragmentTest_textView_D"
                style="@style/item_textView_titillium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/fragmentTest_linearLayout_settingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.075"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025">

        <ImageButton
            android:id="@+id/fragmentTest_imageButton_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/icon_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.075"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.025"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/fragmentTest_textView_settings"
            style="@style/textView_font_bahnschrift"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/Settings"
            android:textColor="@color/logo_letters" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/fragmentTest_imageButton_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:src="@drawable/icon_favorite_filled_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:id="@+id/fragmentTest_linearLayout_settings"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/background_linearlayout_settings"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/fragmentTest_linearLayout_options"
        app:layout_constraintRight_toRightOf="@+id/fragmentTest_linearLayout_options"
        app:layout_constraintTop_toTopOf="@+id/fragmentTest_linearLayout_options"
        app:layout_constraintVertical_bias="0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp">

            <TextView
                style="@style/textView_font_bahnschrift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/SETTINGS"
                android:textColor="@color/logo_letters"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/fragmentTest_imageButton_settingsClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@android:color/transparent"
                android:src="@drawable/icon_close"
                tools:ignore="ContentDescription" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ScrollViewCount">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textView_font_bahnschrift"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Only_Favorite_Words"
                        android:textColor="@color/logo_letters"
                        tools:ignore="RelativeOverlap" />

                    <Switch
                        android:id="@+id/fragmentTest_switch_favorite"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/textView_font_bahnschrift"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Sounds"
                        android:textColor="@color/logo_letters"
                        tools:ignore="RelativeOverlap" />

                    <Switch
                        android:id="@+id/fragmentTest_switch_sound"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:checked="true"
                        tools:ignore="UseSwitchCompatOrMaterialXml" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/textView_font_bahnschrift"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Difficulty"
                        android:textColor="@color/logo_letters"
                        tools:ignore="RelativeOverlap" />

                    <TextView
                        android:id="@+id/fragmentTest_textView_difficultyCount"
                        style="@style/textView_font_bahnschrift"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/logo_letters"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>

                <SeekBar
                    android:id="@+id/fragmentTest_seekBar_difficulty"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/textView_font_bahnschrift"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/Chance_of_Unknown"
                        android:textColor="@color/logo_letters" />

                    <TextView
                        android:id="@+id/fragmentTest_textView_unknownChanceCount"
                        style="@style/textView_font_bahnschrift"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:textColor="@color/logo_letters"
                        tools:ignore="RelativeOverlap" />

                </RelativeLayout>

                <SeekBar
                    android:id="@+id/fragmentTest_seekBar_unknownChance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/fragmentTest_relativeLayout_progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_background"
        android:gravity="center"
        android:visibility="invisible">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/logo_wordest"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHeight_percent="0.2"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.2"
                app:layout_constraintWidth_percent="0.6"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ProgressBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    style="@style/textView_font_berlinSansFB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/Your_words_is_loading"
                    android:textColor="@color/logo_letters"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>